# wg-verwaltung

./: .env  Cargo.toml  ToDo.txt  db.json  docker_postgres_setup.txt
migrations/2021-11-23-231502_wg/: down.sql  up.sql
src/: aufgabe.rs  bewohner.rs  bewohner_verwaltung.rs  db.rs  einkauf.rs  geld.rs  kalender.rs  lib.rs  login.rs  main.rs  putzplan.rs
src/controller/: geld.rs  login.rs  mod.rs
src/db/: mod.rs
src/model/: mod.rs  models.rs  schema.rs
src/models/: bewohner.rs  geburtstag.rs  mod.rs
src/view/: mod.rs
