[package]
name = "wg-verwaltung"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
chrono = "0.4.19"
json = "0.12.4"
rand = "0.8.4"
rust-argon2 = "0.8.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.29"
postgres = { version = "0.19.2", features = ["with-chrono-0_4"] }
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
